# nixos-config

./: .gitignore  .gitmodules  AGENTS.md  WARP.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  nvim  packages.nix
.Trash-1000/files/: autopairs.nix-1776049430.814785
.Trash-1000/info/: autopairs.nix-1776049430.814785.trashinfo
config/: config.pkl  packages.toml  zed-profiles.toml
config/libs/: hyprlang.pkl  kdl.pkl  luagen.pkl  nu.pkl  qml.pkl
modules/: _config.nix  dotfiles.nix  gtk.nix  neovim.nix  zsh.nix
modules/dev/: _idea-pkg.nix  _idea-plugins.nix  java.nix  minecraft.nix  rust.nix
modules/features/: _dms-plugins.nix  _noctalia-base.nix  brave.nix  cursor.nix  desktop-common.nix  dms-niri.nix  fonts.nix  foot.nix  ghostty.nix  gtk.nix  helium.nix  helix.nix  hyprland.nix  kitty.nix  niri.nix  noctalia-hyprland.nix  noctalia-niri.nix  obs.nix  obsidian.nix  orchestrator.nix  qt.nix  spicetify.nix  terminal.nix  zen.nix
modules/home/: browsers.nix  btop.nix  dms.nix  dotfiles.nix  equibop.nix  (+16 more)
niri/: config.kdl  decoration.kdl  input.kdl  layout.kdl  overview-wallpaper.kdl  window-rule.kdl
spice/: beautiful-lyrics.mjs
tools/orchestrator/: Cargo.toml
tools/orchestrator/src/: config.rs  main.rs
tools/orchestrator/src/commands/: gc.rs  generations.rs  mod.rs  qs_clean.rs  rebuild.rs  sync.rs  update_pkg.rs  zed_profile.rs
tools/orchestrator/src/tui/: app.rs  mod.rs  running_command.rs  sidebar.rs  system_info.rs
tools/orchestrator/src/tui/panels/: cleanup.rs  generations.rs  mod.rs  rebuild.rs  settings.rs  terminal.rs
(+161 files in other folders)
